Landsgemeinde: Uppercase "Open Data" [skip-ci]

--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -398,8 +398,8 @@ msgstr "Neue Landsgemeinde hinzugefügt"
 msgid "New assembly"
 msgstr "Neue Landsgemeinde"
 
-msgid "Open data"
-msgstr "Open data"
+msgid "Open Data"
+msgstr "Open Data"
 
 #, python-format
 msgid "Results from the ${title}, structured as json"
