--- a/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
+++ b/src/onegov/translator_directory/locale/de_CH/LC_MESSAGES/onegov.translator_directory.po
@@ -834,6 +834,9 @@ msgstr "Die Datei für die Unterschrift konnte nicht erkannt werden."
 msgid "Download"
 msgstr "Herunterladen"
 
+msgid "Export Excel (from filter)"
+msgstr "Excel Export (mit Filter)"
+
 #~ msgid ""
 #~ "In order for your application for inclusion in the directory to be "
 #~ "processed, a complete application must be submitted. This includes the "
