--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-04-28 16:19+0200\n"
+"POT-Creation-Date: 2025-04-24 09:19+0200\n"
 "PO-Revision-Date: 2022-03-15 10:50+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: French\n"
@@ -3367,8 +3367,8 @@ msgstr "Refuser ${title} est irréversible."
 msgid "Reject reservation"
 msgstr "Refuser la réservation"
 
-#. Used in sentence: "${event} published."
 #.
+#. Used in sentence: "${event} published."
 msgid "Event"
 msgstr "Événement"
 
@@ -3738,25 +3738,13 @@ msgstr ""
 "iFrame:"
 
 msgid ""
-"To display the breadcrumbs you can add ${bc_level} as a parameter to the "
-"URL. The number defines where the breadcrumbs start. 1 in this case means "
-"that the first level is hidden. You can use any number as long as it is less "
-"than the number of levels in the breadcrumbs."
-msgstr ""
-"Pour afficher le fil d'Ariane, vous pouvez ajouter ${bc_level} comme "
-"paramètre à l'URL. Le nombre définit où le fil d'Ariane commence. 1 dans ce "
-" cas signifie que le premier niveau est masqué. Vous pouvez utiliser "
-"n'importe quel nombre tant qu'il est inférieur au nombre de niveaux dans le "
-"fil d'Ariane."
-
-msgid ""
 "Please review your data and press \"Complete\" to finalize the process. If "
 "there's anything you'd like to change, click on \"Edit\" to return to the "
 "filled-out form."
 msgstr ""
 "Veuillez vérifier vos données et appuyez sur « Compléter » pour finaliser le "
-"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur « "
-"Modifier » pour retourner sur le formulaire complété."
+"processus. S'il y a quelque chose que vous souhaitez modifier, cliquez sur "
+"« Modifier » pour retourner sur le formulaire complété."
 
 msgid ""
 "The image shown in the list view is a square. To have your image shown fully "
