--- a/src/onegov/agency/locale/de_CH/LC_MESSAGES/onegov.agency.po
+++ b/src/onegov/agency/locale/de_CH/LC_MESSAGES/onegov.agency.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-02-13 15:44+0100\n"
+"POT-Creation-Date: 2025-05-20 09:52+0200\n"
 "PO-Revision-Date: 2021-01-27 13:07+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -270,8 +270,18 @@ msgstr "Organisation"
 msgid "Do you really want to delete this agency?"
 msgstr "Möchten Sie die Organisation wirklich löschen?"
 
+msgid "This cannot be undone. Following agencies will be deleted as well:"
+msgstr ""
+"Dies kann nicht rückgängig gemacht werden. Folgende Organisationen werden "
+"ebenfalls gelöscht:"
+
 msgid "Delete agency"
 msgstr "Organisation löschen"
+
+msgid "Please scroll to the bottom to enable the confirm button"
+msgstr ""
+"Bitte scrollen Sie bis zum Ende der Liste, um den Bestätigungsbutton zu "
+"aktivieren"
 
 msgid "Agency with memberships or suborganizations can't be deleted"
 msgstr "Organisationen mit Mitgliedschaften können nicht gelöscht werden"
