Org: Allows key codes in tickets with future reservations to be edited
TYPE: Feature
LINK: OGC-2205

--- a/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/de_CH/LC_MESSAGES/onegov.org.po
@@ -2,7 +2,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2025-05-14 12:47+0200\n"
+"POT-Creation-Date: 2025-05-21 11:26+0200\n"
 "PO-Revision-Date: 2022-03-15 10:21+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -1335,6 +1335,21 @@ msgstr "Von"
 msgid "Ending at"
 msgstr "Bis"
 
+msgid "Key Code"
+msgstr "Schlüsselcode"
+
+msgid "Invalid Kaba Code. Needs to be a 4 to 6 digit number code."
+msgstr "Ungültiger Kaba Code. Muss ein 4- bis 6-stelliger Zifferncode sein."
+
+msgid "Lead Time"
+msgstr "Vorlaufszeit"
+
+msgid "In minutes"
+msgstr "In Minuten"
+
+msgid "Lag Time"
+msgstr "Nachlaufszeit"
+
 msgid "I am looking to make a reservation lasting"
 msgstr "Ich suche einen Termin für"
 
@@ -2089,9 +2104,6 @@ msgstr ""
 msgid "Invalid price, needs to be a non-negative number."
 msgstr "Ungültiger Preis, muss eine nicht-negative Zahl sein."
 
-msgid "Invalid Kaba Code. Needs to be a 4 to 6 digit number code."
-msgstr "Ungültiger Kaba Code. Muss ein 4- bis 6-stelliger Zifferncode sein."
-
 msgid "Enable newsletter"
 msgstr "Newsletter aktivieren"
 
@@ -2235,9 +2247,6 @@ msgstr "ID der Anlage"
 
 msgid "Default Lead Time"
 msgstr "Standard Vorlaufszeit"
-
-msgid "In minutes"
-msgstr "In Minuten"
 
 msgid "Default Lag Time"
 msgstr "Standard Nachlaufszeit"
@@ -3322,9 +3331,6 @@ msgstr "Anmeldung stornieren"
 msgid "Edit submission"
 msgstr "Eingabe bearbeiten"
 
-msgid "Key Code"
-msgstr "Schlüsselcode"
-
 msgid "Reject"
 msgstr "Absagen"
 
@@ -3349,6 +3355,9 @@ msgstr "Details zu Ihrer Reservation"
 
 msgid "Edit details"
 msgstr "Details bearbeiten"
+
+msgid "Edit key code"
+msgstr "Schlüsselcode bearbeiten"
 
 msgid "Accept all with message"
 msgstr "Alle annehmen mit Kommentar"
@@ -6436,14 +6445,14 @@ msgstr "Alle Reservationen absagen mit Kommentar"
 msgid "Adjust reservation"
 msgstr "Reservation Anpassen"
 
-msgid "One of your reservations was adjusted"
-msgstr "Eine von Ihren Reservationen wurde angepasst"
-
 msgid "The reservation was adjusted"
 msgstr "Die Reservation wurde angepasst"
 
 msgid "The reservation was left unchanged"
 msgstr "Die Reservation ist unverändert geblieben"
+
+msgid "There are no future reservations"
+msgstr "Es gibt keine zukünftige Reservationen"
 
 msgid "Added a new daypass"
 msgstr "Eine neue Tageskarte wurde hinzugefügt"
